Disable global animations for the time decoration is being rendered

For the short period of time we disable the animation for various
effects that can occur when decoration is being rendered to file.

This should prevent the decoration to render itself at the beginning
of the animation (i.e. first "frame").

BUG: 426687
(cherry picked from commit 7af241ba7abcc9e6151acd4cf82d74d1482cff70)